--- a/index.yaml
+++ b/index.yaml
@@ -9,3 +9,10 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+# Used 6 times in query history.
+- kind: Crossword
+  properties:
+  - name: type
+  - name: date
+    direction: desc
